# expense-tracker

./: .dockerignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  expenses.db  main.py  pyproject.toml  vlm.py
llm/: __init__.py  llm.py  openrouter_llm.py
static/: app.js  index.html
tests/: conftest.py  test_api.py  test_e2e.py
